--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 <head profile="http://www.w3.org/2005/10/profile">
-        <title>MAFIA 3 FREE CASH AND GOLD GENERATOR | FREE MAFIA 3 CASH GOLD</title>
+        <title>MAFIA 3 Rivals FREE CREDITS AND CASH GENERATOR | FREE MAFIA 3 CREDITS CASH</title>
         <link rel="icon" type="image/ico" href="img/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="icon" type="image/png" href="img/favicon.html">
@@ -28,14 +28,14 @@
 
         <!-- SEO OPTIMISATION -->
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta name="keywords" content="mafia 3 hack, mafia 3 free gold, mafia 3 free cash, mafia 3 free gold cash, mafia 3 cheat, mafia 3 cheats, mafia 3 hacks pc, mafia 3 pc free gold, mafia 3 pc free cash, mafia 3 xbox hack, mafia 3 ps4 hack, mafia 3 xbox free gold, mafia 3 xbox free cash, mafia 3 ps4 free cash, mafia 3 ps4 free gold">
-        <meta name="description" content="MAFIA 3 FREE CASH AND GOLD GENERATOR FOR ALL CONSOLES! WE OFFER FREE CASH AND GOLD FOR MAFIA 3! COMPLETE A FEW STEPS TO GET YOUR MAFIA 3 CASH AND GOLD!">
+        <meta name="keywords" content="mafia 3 rivals hack, mafia 3 rivals cheats, mafia 3 rivals credits hack, mafia 3 rivals credits cheat, mafia 3 rivals free credits, mafia 3 rivals free cash, mafia 3 free cash hacks, mafia 3 rivals credits hacks, mafia 3 free cash xbox, mafia 3 free cash ps4, mafia 3 free cash pc, mafia 3 free cash, mafia 3 free credits cash cash, mafia 3 cheat, mafia 3 cheats, mafia 3 hacks pc, mafia 3 pc free cash, mafia 3 pc free cash, mafia 3 xbox hack, mafia 3 ps4 hack, mafia 3 xbox free cash, mafia 3 xbox free cash, mafia 3 ps4 free cash, mafia 3 ps4 free cash credits">
+        <meta name="description" content="MAFIA 3 RIVALS FREE CREDITS AND CASH GENERATOR FOR ALL CONSOLES! WE OFFER FREE CREDTS AND CASH FOR MAFIA 3 RIVALS! COMPLETE A FEW STEPS TO GET YOUR MAFIA 3 RIVALS CREDITS AND CASH!">
 
 
         <meta property="og:url"           content="http://www.mafia3hack.com" />
   		<meta property="og:type"          content="website" />
- 		<meta property="og:title" content="MAFIA 3 - Generator - Unlimited Gold and Cash"/>
-        <meta property="og:description" content="MAfia 3 Generator can be used to get free Mafia 3 Gold and Cash. Click Here if you want to know how to get resources for Mafia 3."/>
+ 		<meta property="og:title" content="MAFIA 3 Rivals - Generator - Unlimited Credits and Cash"/>
+        <meta property="og:description" content="Mafia 3 Rivals Generator can be used to get free Mafia 3 Rivals Credits and Cash. Click Here if you want to know how to get resources for Mafia 3 Rivals."/>
   		<meta property="og:image"         content="" />
 
 
@@ -96,8 +96,8 @@
                                 <h2>Verification</h2>
                             </div>
                             <div class="section-content">
-                            <p style="color:white;">Before we add the Cash and Gold to your account you need to VERIFY that you are human and not a software (automated bot) to prevent user's from abusing our generator.</p>
-                            <p style="color:white;">After completing one of the offers, the Mafia 3 Cash and Gold will be added to your account in just few minutes.</p><br><br>
+                            <p style="color:white;">Before we add the Credits and Cash to your account you need to VERIFY that you are human and not a software (automated bot) to prevent user's from abusing our generator.</p>
+                            <p style="color:white;">After completing one of the offers, the Mafia 3 Rivals Credits and Cash will be added to your account in just few minutes.</p><br><br>
                             <center>
                                 <img src="img/button.png" onclick="call_locker();" />
 
@@ -106,7 +106,7 @@
                                 <p style="color:white;"><b>STEPS TO VERIFY</b></p>
                                 <p style="color:white;"><span class="badge">1 </span> Click on "VERIFY NOW!".</p>
                                 <p style="color:white;"><span class="badge">2 </span> Choose any offer and complete it.</p>
-                                <p style="color:white;"><span class="badge">3 </span> Check your MAFIA 3 account for the Cash and Gold.</p>
+                                <p style="color:white;"><span class="badge">3 </span> Check your MAFIA 3 account for the Credits and Cash.</p>
                             </ul>
                         </div>
                     </div>
@@ -224,8 +224,8 @@
                                     <div class="row">
                                          <div class="col-md-12">
                                          <center>
-                                          <div class="fb-share-button" data-href="http://www.mafia3hack.com" data-layout="button_count" data-size="small" data-mobile-iframe="false"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.youtube.com/watch?v=CrjKZi0-EyA">Share</a></div>
-                                            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.mafia3hack.com" data-text="Wow! I just got free Gold and Cash on Mafia 3" data-hashtags="mafia3,mafia,rivals">Tweet</a>
+                                          <div class="fb-share-button" data-href="http://www.mafia3hack.com" data-layout="button_count" data-size="small" data-mobile-iframe="false"><a class="fb-xfbml-parse-ignore" target="_blank" href="http://www.mafia3hack.com">Share</a></div>
+                                            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.mafia3hack.com" data-text="Wow! I just got free Credits and Cash on Mafia 3 Rivals" data-hashtags="mafia3,mafia,rivals">Tweet</a>
 <div class="fb-like" data-href="http://www.mafia3hack.com" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
                                         </center>
                                         </div>
@@ -249,7 +249,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <h1>Step 3. Generate!</h1>
-                                        <p>Select number of Cash and Gold to generate for your account and click 'Generate'.</p>
+                                        <p>Select number of Credits and Cash to generate for your account and click 'Generate'.</p>
                                     </div>
                                 </div>
                             </div>
@@ -271,7 +271,7 @@
                                         </div>
                                          <div class="col-md-12">
                                             <div class="form-group">
-                                                <label style="color:white;" for="elixir_select">Gold Amount</label>
+                                                <label style="color:white;" for="elixir_select">Credits Amount</label>
                                                 <select id="elixir_select" class="form-control gen-select gen-select-gold">
                                                     <option value="999_999">99,999,999</option>
                                                 </select>
@@ -314,22 +314,22 @@
 <SCRIPT language=javascript>
 <!--
 
-textLines=new Array(    '<i><img src="img/UnitedStatesFlag.png"/><b> Josh   Got</b>  <img src="img/gems.png" width="15" height="17"/>  12980  <br/><br/>"wondering how do the best players build so quickly, turns our they use this site to get gold and cash"</i>',
-            '<i><img src="img/FranceFlag.png"/><b> wall57   Got</b>  <img src="img/gems.png" width="15" height="17"/>  14495   <br/><br/>"I use this site for a week already. All that great. I hope he continues to offer gold!"</i>',
+textLines=new Array(    '<i><img src="img/UnitedStatesFlag.png"/><b> Josh   Got</b>  <img src="img/gems.png" width="15" height="17"/>  12980  <br/><br/>"wondering how do the best players build so quickly, turns our they use this site to get credits and cash"</i>',
+            '<i><img src="img/FranceFlag.png"/><b> wall57   Got</b>  <img src="img/gems.png" width="15" height="17"/>  14495   <br/><br/>"I use this site for a week already. All that great. I hope he continues to offer credits!"</i>',
             '<i><img src="img/UnitedStatesFlag.png"/><b> Carter   Got</b>  <img src="img/gems.png" width="15" height="17"/>  18321   <br/><br/>"I got loads of cash !!! Woohoo!!"</i>',
             '<i><img src="img/GermanyFlag.png"/><b> cristy   Got</b>  <img src="img/gems.png" width="15" height="17"/>  25860   <br/><br/>"My friend recommended this site and now I recommend it to you"</i>',
             '<i><img src="img/SpainFlag.png"/><b> bulb0   Got</b>  <img src="img/gems.png" width="15" height="17"/>  38635   <br/><br/>"After spending € 150 on this game I finally found it! Incredible!"</i>',
-            '<i><img src="img/UnitedStatesFlag.png"/><b> MarK   Got</b>  <img src="img/gems.png" width="15" height="17"/>  18739   <br/><br/>"I highly recommend this site if you want unlimited gold and cash and shit. It is very easy to use, and they really do what they promise!"</i>',
+            '<i><img src="img/UnitedStatesFlag.png"/><b> MarK   Got</b>  <img src="img/gems.png" width="15" height="17"/>  18739   <br/><br/>"I highly recommend this site if you want unlimited credits and cash and shit. It is very easy to use, and they really do what they promise!"</i>',
             '<i><img src="img/FranceFlag.png"/><b> Liene   Got</b>  <img src="img/gems.png" width="15" height="17"/>  49316   <br/><br/>"This is awesome !"</i>',
-            '<i><img src="img/UnitedStatesFlag.png"/><b> Ray   Got</b>  <img src="img/gems.png" width="15" height="17"/>  9999999   <br/><br/>"OMG! Just got 9999999 cash this is crazy i will recommend it to my friends"</i>',
+            '<i><img src="img/UnitedStatesFlag.png"/><b> Ray   Got</b>  <img src="img/gems.png" width="15" height="17"/>  9999999   <br/><br/>"OMG! Just got 9999999 credits this is crazy i will recommend it to my friends"</i>',
             '<i><img src="img/SpainFlag.png"/><b> cruising   Got</b>  <img src="img/gems.png" width="15" height="17"/>  69631   <br/><br/>"Gracias Ray this is so cool i got 99m"</i>',
-            '<i><img src="img/UnitedStatesFlag.png"/><b> Pete   Got</b>  <img src="img/gems.png" width="15" height="17"/>  109955   <br/><br/>"I was not so lucky as u guys just got myself 99mil gold and cash lol ... dont get me wrong i dont complain this is so cool"</i>',
-            '<i><img src="img/UnitedStatesFlag.png"/><b> Kyan   Got</b>  <img src="img/gems.png" width="15" height="17"/>  26279    <br/><br/>"WTF! thank for gold. this to be real"</i>',
-            '<i><img src="img/NorwayFlag.png"/><b> multiclan   Got</b>  <img src="img/gems.png" width="15" height="17"/>  32562    <br/><br/>"Thanks Kyan you were right i got loads of cash n gold"</i>',
-            '<i><img src="img/FranceFlag.png"/><b> guitarman   Got</b>  <img src="img/gems.png" width="15" height="17"/>  49735   <br/><br/>"Lovely ! Btw what is the maximum amount of gold you can have  ?"</i>',
+            '<i><img src="img/UnitedStatesFlag.png"/><b> Pete   Got</b>  <img src="img/gems.png" width="15" height="17"/>  109955   <br/><br/>"I was not so lucky as u guys just got myself 99mil credits and cash lol ... dont get me wrong i dont complain this is so cool"</i>',
+            '<i><img src="img/UnitedStatesFlag.png"/><b> Kyan   Got</b>  <img src="img/gems.png" width="15" height="17"/>  26279    <br/><br/>"WTF! thank for cash and credits. this to be real"</i>',
+            '<i><img src="img/NorwayFlag.png"/><b> multiclan   Got</b>  <img src="img/gems.png" width="15" height="17"/>  32562    <br/><br/>"Thanks Kyan you were right i got loads of cash n credits"</i>',
+            '<i><img src="img/FranceFlag.png"/><b> guitarman   Got</b>  <img src="img/gems.png" width="15" height="17"/>  49735   <br/><br/>"Lovely ! Btw what is the maximum amount of credts you can have  ?"</i>',
             '<i><img src="img/ItalyFlag.png"/><b> playmou5   Got</b>  <img src="img/gems.png" width="15" height="17"/>  61673    <br/><br/>"Thanks now i can boost game now"</i>',
-            '<i><img src="img/NorwayFlag.png"/><b> neverpay   Got</b>  <img src="img/gems.png" width="15" height="17"/>  87224    <br/><br/>"Finally! free cash and gold "</i>',
-            '<i><img src="img/FranceFlag.png"/><b> plazpyar   Got</b>  <img src="img/gems.png" width="15" height="17"/>  62301    <br/><br/>"WOW 99.999.999 GOLD !!!"</i>');
+            '<i><img src="img/NorwayFlag.png"/><b> neverpay   Got</b>  <img src="img/gems.png" width="15" height="17"/>  87224    <br/><br/>"Finally! free cash and credits "</i>',
+            '<i><img src="img/FranceFlag.png"/><b> plazpyar   Got</b>  <img src="img/gems.png" width="15" height="17"/>  62301    <br/><br/>"WOW 99.999.999 credts !!!"</i>');
 
 
 var i = Math.floor(16*Math.random())
